--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ################################################################################
 #                                                                              #
-#                               fastcall-atc                                   #
+#                              fastcall-spma                                   #
 #                                    -                                         #
 #  A collection of helper scripts for reproducing fastcall benchmark results.  #
 #                                                                              #
